<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/o_qu_o_divertido_voc"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewsubTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/em_uma_escala_de_0_a_10"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:max="100" />

    <TextView
        android:id="@+id/tvRsultado1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tvStart"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp" />
    <TextView
        android:id="@+id/tvStop"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp" />




</LinearLayout>